Add sidebar and start switching the routes around so we can do project sharing.

--- a/website/app/components/login/mc-login.html
+++ b/website/app/components/login/mc-login.html
@@ -1,7 +1,6 @@
 <div>
-    {{$ctrl.message}}
     <div id="top" class="row">
-        <header>
+        <header class="splash-header">
             <div class="row">
                 <h1 style="color: white; padding: 30px;">Materials Commons</h1>
             </div>
