--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -42,6 +42,56 @@ html {
     color: #ffffff;
 }
 
+.sidebar-menu,
+.sidebar-menu ul {
+    list-style: none;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.sidebar-menu li {
+    margin: 0;
+}
+
+.sidebar-menu > li:nth-child(1) {
+    border-top: none;
+}
+
+.sidebar-menu > li {
+    border-bottom: 1px solid #283593;
+}
+
+.sidebar-menu .md-button {
+    border-radius: 0;
+    color: white;
+    cursor: pointer;
+    display: block;
+    align-items: inherit;
+    line-height: 40px;
+    margin: 0;
+    overflow: hidden;
+    padding: 0px 16px;
+    text-align: left;
+    text-decoration: none;
+    white-space: normal;
+    width: 100%;
+}
+
+.sidebar-menu .md-button:hover,
+.sidebar-menu .md-button:focus {
+    background: #267ed5 !important;
+}
+
+.login-splash {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    padding: 50px;
+    width: 400px;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.3);
+}
 
 /* *************** End Materials Design CSS *************** */
 
@@ -777,27 +827,15 @@ textarea.no-resize {
     transform: translate(0, 0);
 }
 
-header {
+.splash-header {
     background: url('../img/splash/bg1.png');
     background-size: cover;
-    height: 70vh;
+    height: 102vh;
     margin-top: -45px;
     background-position: 10% 60%;
 }
 
-.login-splash {
-    /*position: absolute;*/
-    /*top: 20%;*/
-    /*left: 30%;*/
-    margin-right: auto;
-    margin-left: auto;
-    /*transform: translate(-50%, -50%);*/
-    text-align: center;
-    padding: 50px;
-    width: 400px;
-    background-color: white;
-    background-color: rgba(255, 255, 255, 0.3);
-}
+
 
 .icon-splash {
     background-color: white;
