--- a/website/app/components/files/mc-files.html
+++ b/website/app/components/files/mc-files.html
@@ -1,7 +1,7 @@
 <div>
     <div ng-if="$ctrl.files.length">
         <md-table-container>
-            <table md-table md-row-select ng-model="$ctrl.selected">
+            <table md-table>
                 <thead md-head>
                 <tr md-row>
                     <th md-column><span>Name</span></th>
@@ -10,7 +10,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr md-row md-select="file" md-auto-select ng-repeat="file in $ctrl.files">
+                <tr md-row ng-repeat="file in $ctrl.files">
                     <td md-cell>{{file.name}}</td>
                     <td md-cell>{{file.size | bytes}}</td>
                     <td md-cell>Thumbnail here</td>
