Add file tree and styling. Start removing files where the logic was moved into a component.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -14,7 +14,8 @@ html {
 }
 
 .md-row-hover:hover {
-    background-color:#267ed5;
+    /*background-color:#267ed5;*/
+    background-color: #eeeeee;
     color: white;
 }
 
