--- a/website/app/application/services/mcmodal/partials/choose-users.html
+++ b/website/app/application/services/mcmodal/partials/choose-users.html
@@ -4,17 +4,32 @@
     </div>
     <br>
     <div class="modal-body">
-        <ul class="list-unstyled">
-            <li ng-repeat="user in ctrl.users">
-                <div class="checkbox">
-                    <input type="checkbox" id="{{user.name}}" ng-model="user.selected">
-                    <label for="{{user.name}}">{{user.name}}</label>
-                </div>
-            </li>
-        </ul>
+        <md-table-container>
+            <table md-table>
+                <thead md-head>
+                <tr md-row>
+                    <th md-column>User</th>
+                    <th md-column>Selected</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr md-row ng-repeat="user in ctrl.users">
+                    <td md-cell>{{user.name}}</td>
+                    <td md-cell><md-checkbox class="md-secondary" ng-model="user.selected"></md-checkbox></td>
+                </tr>
+                </tbody>
+            </table>
+        </md-table-container>
+        <md-list ng-if="false">
+            <md-list-item ng-repeat="user in ctrl.users">
+                <p>{{user.name}}</p>
+                <md-checkbox class="md-secondary" ng-model="user.selected"></md-checkbox>
+                <md-divider></md-divider>
+            </md-list-item>
+        </md-list>
     </div>
     <div class="modal-footer">
-        <button class="btn bt-success text-uppercase" ng-click="ctrl.ok()">ok</button>
-        <button class="btn btn-warning text-uppercase" ng-click="ctrl.cancel()">cancel</button>
+        <md-button class="md-primary md-raised" ng-click="ctrl.ok()">ok</md-button>
+        <md-button class="md-warn md-raised" ng-click="ctrl.cancel()">cancel</md-button>
     </div>
 </div>
