--- a/website/app/components/file-tree/dir/mc-dir-overview.html
+++ b/website/app/components/file-tree/dir/mc-dir-overview.html
@@ -1,153 +1,118 @@
-<div layout="row" layout-align="center center">
-    <span flex></span>
-    <div layout="column" flex="50">
-        <md-table-container>
-            <table md-table>
-                <thead md-head>
-                <tr md-row>
-                    <th md-column>Type</th>
-                    <th md-column>Count</th>
-                    <th md-column>Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr md-row class="md-row-hover">
-                    <td md-cell><i class="fa fa-fw fa-files-o file-color"></i> All</td>
-                    <td md-cell>{{$ctrl.allFiles.files.length}}</td>
-                    <td md-cell>
-                        <md-button class="md-primary"
-                                   ng-click="$ctrl.viewFiles($ctrl.allFiles)">
-                            view files
-                        </md-button>
-                    </td>
-                </tr>
-                <tr md-row class="md-row-hover" ng-repeat="entry in $ctrl.overview | filter:{name: '!Directory'}">
-                    <td md-cell>
-                        <i class="fa fa-fw {{entry.icon}} file-color"></i> {{entry.name}}
-                    </td>
-                    <td md-cell>{{entry.count}}</td>
-                    <td md-cell>
-                        <md-button class="md-primary" ng-if="entry.name !== 'Directory'"
-                           ng-click="$ctrl.viewFiles(entry)">
-                            view files
-                        </md-button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </md-table-container>
-
-        <table ng-if="false" class="table table-striped">
-            <thead>
-            <tr>
-                <th>Type</th>
-                <th>Count</th>
-                <th>Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><i class="fa fa-fw fa-files-o file-color"></i> All</td>
-                <td>{{$ctrl.allFiles.files.length}}</td>
-                <td>
-                    <md-button class="md-primary"
-                       ng-click="$ctrl.viewFiles($ctrl.allFiles)">
-                        view files
-                    </md-button>
-                </td>
-            </tr>
-            <tr ng-repeat="entry in $ctrl.overview | filter:{name: '!Directory'}">
-                <td>
-                    <i class="fa fa-fw {{entry.icon}} file-color"></i> {{entry.name}}
-                </td>
-                <td>{{entry.count}}</td>
-                <td>
-                    <a ng-if="entry.name !== 'Directory'"
-                       ng-click="$ctrl.viewFiles(entry)" class="text-uppercase">
-                        view files
-                    </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+<div layout="column">
+    <div layout="row">
+        <span flex></span>
+        <div flex="50">
+            <md-table-container>
+                <table md-table>
+                    <thead md-head>
+                    <tr md-row>
+                        <th md-column>Type</th>
+                        <th md-column>Count</th>
+                        <th md-column>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr md-row class="md-row-hover">
+                        <td md-cell><i class="fa fa-fw fa-files-o file-color"></i> All</td>
+                        <td md-cell>{{$ctrl.allFiles.files.length}}</td>
+                        <td md-cell>
+                            <md-button class="md-primary"
+                                       ng-click="$ctrl.viewFiles($ctrl.allFiles)">
+                                view files
+                            </md-button>
+                        </td>
+                    </tr>
+                    <tr md-row class="md-row-hover" ng-repeat="entry in $ctrl.overview | filter:{name: '!Directory'}">
+                        <td md-cell>
+                            <i class="fa fa-fw {{entry.icon}} file-color"></i> {{entry.name}}
+                        </td>
+                        <td md-cell>{{entry.count}}</td>
+                        <td md-cell>
+                            <md-button class="md-primary" ng-if="entry.name !== 'Directory'"
+                                       ng-click="$ctrl.viewFiles(entry)">
+                                view files
+                            </md-button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </md-table-container>
+        </div>
+        <span flex></span>
     </div>
-    <span flex></span>
-    <!--<div ng-if="$ctrl.files.length">-->
-        <!--<div class="row">-->
-            <!--<span ng-if="$ctrl.downloadState == 'preparing'">-->
-                <!--<i class="fa fa-circle-o-notch fa-spin"></i>-->
-                <!--Preparing download (this may take some time)...-->
-                <!--{{$ctrl.downloadMessageFlash}}-->
-            <!--</span>-->
-            <!--<span ng-if="$ctrl.downloadState == 'done'">-->
-                <!--<a ng-href="{{ctrl.downloadURL}}" ng-click="$ctrl.downloadState='none'">-->
-                    <!--Preparation done click here to download-->
-                <!--</a>-->
-            <!--</span>-->
-            <!--<ul ng-if="$ctrl.downloadState === 'none'" class="list-inline">-->
-                <!--<li class="pull-right">-->
-                    <!--<input placeholder="Filter by name..."-->
-                           <!--class="form-control"-->
-                           <!--ng-model="ctrl.fileFilter.name"-->
-                           <!--ng-model-options="{ updateOn: 'default blur', debounce: { default: 200, blur: 0} }">-->
-                <!--</li>-->
-                <!--<li ng-if="$ctrl.selectedCount">-->
-                    <!--<a class="text-uppercase" ng-click="$ctrl.downloadSelectedFiles()">-->
-                        <!--<i class="fa fa-fw fa-download"></i> download selected-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li ng-if="$ctrl.selectedCount">-->
-                    <!--<a class="text-uppercase" ng-click="$ctrl.shareSelectedFiles()">-->
-                        <!--<i class="fa fa-fw"></i> share selected-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li ng-if="!$ctrl.selectedCount">-->
-                    <!--<a class="text-uppercase" ng-click="$ctrl.selectAllFiles()">-->
-                        <!--select all-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li ng-if="$ctrl.selectedCount">-->
-                    <!--<a class="text-uppercase" ng-click="$ctrl.deselectSelectedFiles()">-->
-                        <!--clear selected-->
-                    <!--</a>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</div>-->
-        <!--<table class="table table-striped">-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<th>File</th>-->
-                <!--<th>Select</th>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tbody>-->
-            <!--<tr ng-repeat="file in $ctrl.files | filter:$ctrl.fileFilter">-->
-                <!--<td>-->
-                    <!--<span>-->
-                        <!--<b>{{$index+1}}.</b>-->
-                        <!--<i class="fa fa-files-o fa-fw file-color"></i>-->
-                        <!--<a ui-sref="projects.project.files.all.edit({file_id: file.id})">-->
-                            <!--{{file.name}}-->
-                        <!--</a>-->
-                        <!--{{file.mediatype.mime}}-->
-                        <!--{{file.size | bytes}}-->
-                    <!--</span>-->
+    <div ng-if="$ctrl.files.length">
+        <div layout="row">
+            <span ng-if="$ctrl.downloadState == 'preparing'">
+                <i class="fa fa-circle-o-notch fa-spin"></i>
+                Preparing download (this may take some time)...
+                {{$ctrl.downloadMessageFlash}}
+            </span>
+            <span ng-if="$ctrl.downloadState == 'done'">
+                <a ng-href="{{ctrl.downloadURL}}" ng-click="$ctrl.downloadState='none'">
+                    Preparation done click here to download
+                </a>
+            </span>
+            <span flex></span>
+        </div>
+        <div>
+            <div layout="row" ng-if="$ctrl.downloadState === 'none'">
+                <md-button ng-if="$ctrl.selectedCount" ng-click="$ctrl.downloadSelectedFiles()">
+                    <i class="fa fa-fw fa-download"></i> download selected
+                </md-button>
+                <md-button ng-if="$ctrl.selectedCount" ng-click="$ctrl.shareSelectedFiles()">
+                    <i class="fa fa-fw"></i> share selected
+                </md-button>
+                <md-button ng-if="!$ctrl.selectedCount" ng-click="$ctrl.selectAllFiles()">
+                    select all
+                </md-button>
+                <md-button ng-if="$ctrl.selectedCount" ng-click="$ctrl.deselectSelectedFiles()">
+                    clear selected
+                </md-button>
+                <span flex="10"></span>
+                <md-input-container md-no-float style="padding-bottom:0; margin-bottom: 0">
+                    <input placeholder="Filter by name..."
+                           ng-model="$ctrl.fileFilter.name"
+                           ng-model-options="{ updateOn: 'default blur', debounce: { default: 200, blur: 0} }">
+                </md-input-container>
+            </div>
+        </div>
 
-                    <!--<div ng-if="$ctrl.isImage(file.mediatype.mime)">-->
-                        <!--<a ui-sref="projects.project.files.all.edit({file_id: file.id})">-->
-                            <!--<img class="img-thumbnail" height="140" width="140"-->
-                                 <!--ng-src="{{$ctrl.fileSrc(file.id)}}">-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</td>-->
-                <!--<td>-->
-                    <!--<a ng-click="$ctrl.fileSelect(file)">-->
-                        <!--<i ng-if="file.selected" class="fa fa-2x fa-fw fa-check text-success"></i>-->
-                        <!--<i ng-if="!file.selected" class="fa fa-2x fa-fw fa-square-o"></i>-->
-                    <!--</a>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--</tbody>-->
-        <!--</table>-->
-    <!--</div>-->
+        <div>
+            <md-table-container>
+                <table md-table>
+                    <thead md-head>
+                    <tr md-row>
+                        <th md-column>File</th>
+                        <th md-column>Select</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr md-row ng-repeat="file in $ctrl.files | filter:$ctrl.fileFilter">
+                        <td md-cell>
+                            <span>
+                                <b>{{$index+1}}.</b>
+                                <i class="fa fa-files-o fa-fw file-color"></i>
+                                <a ui-sref="project.file({file_id: file.id})">
+                                    {{file.name}}
+                                </a>
+                                {{file.mediatype.mime}}
+                                {{file.size | bytes}}
+                            </span>
+
+                            <div ng-if="$ctrl.isImage(file.mediatype.mime)">
+                                <a ui-sref="project.file({file_id: file.id})">
+                                    <img class="img-thumbnail" height="140" width="140"
+                                         ng-src="{{$ctrl.fileSrc(file.id)}}">
+                                </a>
+                            </div>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox ng-click="$ctrl.fileSelect(file)" ng-model="file.selected"></md-checkbox>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </md-table-container>
+        </div>
+    </div>
 </div>
