--- a/website/app/components/file-tree/dir/mc-dir-overview.html
+++ b/website/app/components/file-tree/dir/mc-dir-overview.html
@@ -69,7 +69,7 @@
                     clear selected
                 </md-button>
                 <span flex="10"></span>
-                <md-input-container md-no-float style="padding-bottom:0; margin-bottom: 0">
+                <md-input-container md-no-float class="md-input-bottom-0">
                     <input placeholder="Filter by name..."
                            ng-model="$ctrl.fileFilter.name"
                            ng-model-options="{ updateOn: 'default blur', debounce: { default: 200, blur: 0} }">
