Convert back to top navbar for project. Rework file tree and routes.

--- a/website/app/components/projects/mc-projects.html
+++ b/website/app/components/projects/mc-projects.html
@@ -3,7 +3,7 @@
          ng-cloak>
         <md-button ng-click="$ctrl.showSidebar = true">O</md-button>
     </div>
-    <md-sidenav class="md-mc-primary-color-hue-2-bg" style="color: white; z-index: 1000"
+    <md-sidenav class="md-mc-primary-color-hue-2-bg" style="color: white;"
                 md-is-locked-open="$ctrl.showSidebar"
                 ng-cloak>
 
