--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -13,6 +13,10 @@ html {
     line-height: 30px;
 }
 
+.file-tree-icon-color {
+    color: #283593;
+}
+
 .md-row-hover:hover {
     /*background-color:#267ed5;*/
     background-color: #eeeeee;
@@ -26,6 +30,10 @@ html {
 
 .md-mc-primary-color-hue-2-bg {
     background-color: #283593;
+}
+
+.mc-md-file-tree-bg {
+    background-color: #c5cae9;
 }
 
 .process-color-bg {
