--- a/website/app/components/file-tree/mc-file-tree.html
+++ b/website/app/components/file-tree/mc-file-tree.html
@@ -1,4 +1,12 @@
-<div layout="row" layout-margin layout-fill>
-    <div ng-if="$ctrl.gridShowingFlag" ag-grid="$ctrl.gridOptions" class="ag-file-browser"></div>
-    <div ng-if="!$ctrl.gridShowingFlag" ag-grid="$ctrl.gridOptions" class="ag-file-browser"></div>
+<div layout="row" layout-fill>
+    <md-sidenav flex="30" class="md-whiteframe-4dp mc-md-file-tree-bg" style="color: white;"
+                md-is-locked-open="true">
+        <md-content layout-margin class="mc-md-file-tree-bg">
+            <div ng-if="$ctrl.gridShowingFlag" ag-grid="$ctrl.gridOptions" class="ag-file-browser"></div>
+            <div ng-if="!$ctrl.gridShowingFlag" ag-grid="$ctrl.gridOptions" class="ag-file-browser"></div>
+        </md-content>
+    </md-sidenav>
+    <md-content flex>
+        <div ui-view></div>
+    </md-content>
 </div>
