Switch to column view of project overview on layout sm and not md.

--- a/website/app/components/project/mc-project-home.html
+++ b/website/app/components/project/mc-project-home.html
@@ -7,7 +7,7 @@
     </div>
 
     <div flex="100">
-        <div layout="row" layout-md="column" layout-wrap layout-align="space-between center">
+        <div layout="row" layout-sm="column" layout-wrap layout-align="space-between center">
             <div flex="25">
                 <md-card class="process-color-bg text-white">
                     <md-card-title layout="column">
