Fix up layout and display of directories and files.

--- a/website/app/components/file-tree/dir/mc-dir-controls.html
+++ b/website/app/components/file-tree/dir/mc-dir-controls.html
@@ -1,6 +1,6 @@
 <div layout="row">
-    <h3 class="md-headline">
-        <i class="fa fa-fw fa-folder-open"></i> {{$ctrl.dir.data.name}}
+    <h3 class="md-title">
+        <i class="fa fa-fw fa-folder-open"></i> {{$ctrl.dir.data.path}}
     </h3>
     <span flex="5"></span>
     <md-button ng-if="!$ctrl.createDirActive"
