--- a/website/app/components/file-tree/dir/mc-dir-overview.html
+++ b/website/app/components/file-tree/dir/mc-dir-overview.html
@@ -12,7 +12,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr md-row class="md-row-hover">
+                    <tr ng-if="$ctrl.allFiles.files.length" md-row class="md-row-hover">
                         <td md-cell><i class="fa fa-fw fa-files-o file-color"></i> All</td>
                         <td md-cell>{{$ctrl.allFiles.files.length}}</td>
                         <td md-cell>
@@ -21,6 +21,11 @@
                                 view files
                             </md-button>
                         </td>
+                    </tr>
+                    <tr ng-if="!$ctrl.allFiles.files.length" md-row>
+                        <td md-cell>No files</td>
+                        <td md-cell></td>
+                        <td md-cell></td>
                     </tr>
                     <tr md-row class="md-row-hover" ng-repeat="entry in $ctrl.overview | filter:{name: '!Directory'}">
                         <td md-cell>
@@ -83,27 +88,29 @@
                     <thead md-head>
                     <tr md-row>
                         <th md-column>File</th>
+                        <td md-column>Thumbnail</td>
                         <th md-column>Select</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr md-row ng-repeat="file in $ctrl.files | filter:$ctrl.fileFilter">
                         <td md-cell>
-                            <span>
+                            <div layout="row" layout-align="start center">
                                 <b>{{$index+1}}.</b>
                                 <i class="fa fa-files-o fa-fw file-color"></i>
-                                <a ui-sref="project.file({file_id: file.id})">
+                                <md-button class="md-primary" ui-sref="project.files.file({file_id: file.id})">
                                     {{file.name}}
-                                </a>
+                                </md-button>
                                 {{file.mediatype.mime}}
                                 {{file.size | bytes}}
-                            </span>
-
+                            </div>
+                        </td>
+                        <td>
                             <div ng-if="$ctrl.isImage(file.mediatype.mime)">
-                                <a ui-sref="project.file({file_id: file.id})">
+                                <md-button class="md-primary" ui-sref="project.files.file({file_id: file.id})">
                                     <img class="img-thumbnail" height="140" width="140"
                                          ng-src="{{$ctrl.fileSrc(file.id)}}">
-                                </a>
+                                </md-button>
                             </div>
                         </td>
                         <td md-cell>
