--- a/website/app/components/project/samples/mc-project-samples.html
+++ b/website/app/components/project/samples/mc-project-samples.html
@@ -1,21 +1,39 @@
 <div layout="row" layout-fill>
     <md-sidenav flex="25" class="md-whiteframe-4dp mc-md-file-tree-bg" style="color: white;"
                 md-is-locked-open="true">
-        <md-content layout-margin class="mc-md-file-tree-bg">
+        <div layout="column" layout-align="center end">
+            <md-button ui-sref="project.processes.new({process:'As Received', process_id:''})"
+                       layout-align="center end">
+                <i class="fa fa-fw fa-plus"></i>Create New Sample
+            </md-button>
+        </div>
+        <md-input-container md-no-float style="margin-top: 0; margin-bottom: 0; margin-left: 6px; margin-right: 6px;">
+            <input placeholder="Search samples..." ng-model="$ctrl.searchText">
+        </md-input-container>
+        <div layout-align="space-around center" style="margin-left:6px;">
+            <span>Sort:</span>
+            <span flex></span>
+            <md-button style="margin-top:0">Date</md-button>
+            <md-button style="margin-top:0"><i class="fa fa-fw fa-arrow-down"></i>A-Z</md-button>
+        </div>
+        <md-divider></md-divider>
+        <md-content class="mc-md-file-tree-bg">
             <ul class="sidebar-menu">
-                <li ng-repeat="sample in $ctrl.samples | orderBy:'name'">
+                <li ng-repeat="sample in $ctrl.samples | filter:$ctrl.showGroupsFilter | filter:$ctrl.searchText | orderBy:'name'">
                     <md-button ui-sref="project.samples.sample({sample_id: sample.id})" style="text-transform: none">
                         <div layout="column" layout-align="start start">
                             <span>{{sample.name}}</span>
-                            <div layout="row" layout-align="space-between center">
+                            <p style="line-height: 20px" class="truncate-text">{{sample.description}}</p>
+                            <div layout="row" layout-fill layout-align="space-between center">
                                 <!--<span popover-placement="right"-->
                                 <!--popover="{{sample.processes | byKey: 'does_transform': true | transformProcesses}}"-->
                                 <!--popover-title="Transformations" popover-trigger="mouseenter">-->
                                 <!--<i class="fa fa-fw fa-flask" style="color: #ff5a60;"></i>{{sample.transforms}}-->
                                 <!--</span>-->
+                                <span><i class="fa fa-fw fa-flask"></i>{{sample.transforms}}</span>
                                 <span>
                                     <i data-placement="right" data-toggle="tooltip" title="Files"
-                                       class="fa fa-fw fa-files-o file"></i>{{sample.files.length}}
+                                       class="fa fa-fw fa-files-o file"></i>{{sample.linked_files.length}}
                                 </span>
                                 <!--<span><composition properties="s.properties"></composition></span>-->
                                 <span>
