--- a/website/app/components/sample/mc-sample.html
+++ b/website/app/components/sample/mc-sample.html
@@ -1,5 +1,5 @@
 <div layout="column" layout-margin layout-fill>
-    <h3 class="md-headline">Sample: {{$ctrl.sample.name}}</h3>
+    <h3 class="md-title">{{$ctrl.sample.name}}</h3>
     <div layout="row">
         <span class="md-subhead"><i class="fa fa-calendar"></i>{{$ctrl.sample.birthtime | toDateString}}</span>
         <span flex="10"></span>
