--- a/website/app/components/process/mc-process.html
+++ b/website/app/components/process/mc-process.html
@@ -1,5 +1,5 @@
 <div layout="column" layout-margin layout-fill>
-    <h3 class="md-headline">Sample: {{$ctrl.process.name}}</h3>
+    <h3 class="md-title">{{$ctrl.process.name}}</h3>
     <div layout="row">
         <span class="md-subhead"><i class="fa fa-calendar"></i>{{$ctrl.process.birthtime | toDateString}}</span>
         <span flex="10"></span>
