--- a/website/app/components/project/mc-project-navbar.html
+++ b/website/app/components/project/mc-project-navbar.html
@@ -1,32 +1,41 @@
-<md-tabs md-selected="ctrl.currentTab" class="md-primary md-hue-2" md-dynamic-height md-border-bottom>
-    <md-tab ui-sref="project.home">
-        <md-tab-label>
-            <span><i class="fa fa-fw fa-home"></i>Home</span>
-        </md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="project.processes">
-        <md-tab-label>
-            <span><i class="fa fa-fw fa-code-fork"></i>Processes</span>
-        </md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="project.samples">
-        <md-tab-label>
-            <span><i class="fa fa-fw fa-cubes"></i>Samples</span>
-        </md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="project.files">
-        <md-tab-label>
-            <span><i class="fa fa-fw fa-files-o"></i>Files</span>
-        </md-tab-label>
-    </md-tab>
-    <!--<md-tab ui-sref="project.reviews">-->
-        <!--<md-tab-label>-->
+<div layout="row" layout-align="center center" class="md-mc-primary-color-hue-2-bg">
+    <div flex="70">
+        <md-tabs md-selected="ctrl.currentTab" class="md-primary md-hue-2" md-dynamic-height md-border-bottom>
+            <md-tab ui-sref="project.home">
+                <md-tab-label>
+                    <span><i class="fa fa-fw fa-home"></i>Home</span>
+                </md-tab-label>
+            </md-tab>
+            <md-tab ui-sref="project.processes">
+                <md-tab-label>
+                    <span><i class="fa fa-fw fa-code-fork"></i>Processes</span>
+                </md-tab-label>
+            </md-tab>
+            <md-tab ui-sref="project.samples">
+                <md-tab-label>
+                    <span><i class="fa fa-fw fa-cubes"></i>Samples</span>
+                </md-tab-label>
+            </md-tab>
+            <md-tab ui-sref="project.files">
+                <md-tab-label>
+                    <span><i class="fa fa-fw fa-files-o"></i>Files</span>
+                </md-tab-label>
+            </md-tab>
+            <!--<md-tab ui-sref="project.reviews">-->
+            <!--<md-tab-label>-->
             <!--<span><i class="fa fa-fw fa-comment"></i>Reviews</span>-->
-        <!--</md-tab-label>-->
-    <!--</md-tab>-->
-    <md-tab ui-sref="project.settings">
-        <md-tab-label>
-            <span><i class="fa fa-fw fa-gear"></i>Settings</span>
-        </md-tab-label>
-    </md-tab>
-</md-tabs>
+            <!--</md-tab-label>-->
+            <!--</md-tab>-->
+            <md-tab ui-sref="project.settings">
+                <md-tab-label>
+                    <span><i class="fa fa-fw fa-gear"></i>Settings</span>
+                </md-tab-label>
+            </md-tab>
+        </md-tabs>
+    </div>
+    <span flex></span>
+    <div class="row" layout-margin>
+        <span class="md-title" style="color: white">{{$ctrl.project.name}}</span>
+        <a style="color:white;" ui-sref="projects">Change</a>
+    </div>
+</div>
