--- a/website/app/components/project/processes/mc-project-processes.html
+++ b/website/app/components/project/processes/mc-project-processes.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-fill>
-    <md-sidenav flex="25" class="md-whiteframe-4dp mc-md-file-tree-bg" style="color: white;"
+    <md-sidenav flex="25" class="md-whiteframe-4dp"
                 md-is-locked-open="true">
         <div layout="column" layout-align="center end">
             <md-button ui-sref="project.processes.new({process:'As Received', process_id:''})"
@@ -17,12 +17,12 @@
             <md-button style="margin-top:0"><i class="fa fa-fw fa-arrow-down"></i>A-Z</md-button>
         </div>
         <md-divider></md-divider>
-        <md-content class="mc-md-file-tree-bg">
+        <md-content>
             <ul class="sidebar-menu">
                 <li ng-repeat="process in $ctrl.processes | filter:$ctrl.searchText | orderBy:'name'">
                     <md-button ui-sref="project.processes.process({process_id: process.id})" style="text-transform: none">
                         <div layout="column" layout-align="start start">
-                            <span style="line-height: 20px">{{process.name}}</span>
+                            <span style="line-height: 20px; margin-top:12px">{{process.name}}</span>
                             <p style="line-height: 20px" class="truncate-text">{{process.description}}</p>
                             <div layout="row" layout-fill layout-align="space-between center">
                                 <span><i class="fa fa-fw fa-flask"></i>{{process.transforms}}</span>
