--- a/website/app/components/project/mc-project-navbar.html
+++ b/website/app/components/project/mc-project-navbar.html
@@ -36,6 +36,6 @@
     <span flex></span>
     <div class="row" layout-margin>
         <span class="md-title" style="color: white">{{$ctrl.project.name}}</span>
-        <a style="color:white;" ui-sref="projects">Change</a>
+        <a style="color:white;" ui-sref="projects">change</a>
     </div>
 </div>
