Set what we should search.

--- a/website/app/components/project/mc-project.html
+++ b/website/app/components/project/mc-project.html
@@ -1,6 +1,6 @@
 <div layout="row" flex="100" layout-fill>
     <div layout="column" flex>
-        <navbar></navbar>
+        <navbar search="'project'"></navbar>
         <mc-project-navbar></mc-project-navbar>
         <md-content layout="row" layout-align="start stretch" flex>
             <div ui-view flex layout-fill></div>
