--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -32,6 +32,10 @@ html {
     background-color: #283593;
 }
 
+.md-mc-primary-bg {
+    background-color: #3f51b5;
+}
+
 .md-mc-project-card-header {
     background-color: #d1d1d1;
 }
@@ -101,7 +105,7 @@ html {
 
 .sidebar-menu .md-button:hover,
 .sidebar-menu .md-button:focus {
-    background: #267ed5 !important;
+    background: #3f51b5 !important;
     color: white;
 }
 
