--- a/website/app/components/files/mc-files.html
+++ b/website/app/components/files/mc-files.html
@@ -11,9 +11,22 @@
                 </thead>
                 <tbody>
                 <tr md-row ng-repeat="file in $ctrl.files">
-                    <td md-cell>{{file.name}}</td>
+                    <td md-cell>
+                        <div layout="row" layout-align="start center">
+                            <i class="fa fa-files-o fa-fw file-color"></i>
+                            <md-button class="md-primary" ui-sref="project.files.file({file_id: file.id})">
+                                {{file.name}}
+                            </md-button>
+                            {{file.mediatype.mime}}
+                            {{file.size | bytes}}
+                        </div>
+                    </td>
                     <td md-cell>{{file.size | bytes}}</td>
-                    <td md-cell>Thumbnail here</td>
+                    <td md-cell>
+                        <img ng-if="$ctrl.isImage(file.mediatype.mime)"
+                             class="img-thumbnail" height="140" width="140"
+                             ng-src="{{$ctrl.fileSrc(file.id)}}">
+                    </td>
                 </tr>
                 </tbody>
             </table>
