--- a/website/app/components/projects/mc-projects.html
+++ b/website/app/components/projects/mc-projects.html
@@ -1,6 +1,6 @@
 <div layout="row" flex="100" layout-fill>
     <div layout="column" flex>
-        <navbar search="'projects'"></navbar>
+        <navbar search="projects"></navbar>
         <md-content layout="row" layout-sm="column" layout-wrap layout-align="start stretch" flex>
             <div flex="25" flex-sm="100" ng-repeat="project in $ctrl.projects">
                 <md-card class="md-primary">
